objects/ContentVersion.object
<CustomObject>
    <fields>
        <fullName>Content_Owner_GIBU__c</fullName>
        <description>pulls GIBU from owner to be available in content report</description>
        <formula>TEXT( Owner.GIBU__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Content Owner GIBU</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Content_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <inlineHelpText>If owner is someone other than yourself, please enter name of content owner.</inlineHelpText>
        <label>Content Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Content</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Current_Owner__c</fullName>
        <description>pulls the owner first and last name, owner is not an available field in report type &apos;Content Report&apos;</description>
        <formula>Owner.FirstName &amp; Owner.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Current Owner</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Energy_Record_Id__c</fullName>
        <label>Energy Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Expiration_Date__c</fullName>
        <inlineHelpText>Enter content date of expiration</inlineHelpText>
        <label>Expiration Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Owner_Active__c</fullName>
        <description>pulls active status from owner to be available in content report</description>
        <formula>Owner.IsActive</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Owner Active</label>
        <type>Checkbox</type>
    </fields>
</CustomObject>